tests/behavior/success/for_break8.bz
function main() -> i32
{
	let i = 0;
	for (let _ in 0..10)
	{
		for (let _ in 0..10)
		{
			switch (i)
			{
				else => switch (i) {
					else => break,
				},
			}
			return 1;
		}
		return 0;
	}
	return 1;
}
