tests/behavior/error/null_pointer_arithmetic8.bz
function main()
{
	let i = 0;
	let p1: ?*i32 = null;
	let p2: ?*i32 = &i;
	let _ = p1 - p2;
}
